# bath-hack-25

./: .gitignore  Cargo.toml  README.md  setup.sh
assets/: kakapo-death.m4a  munch.m4a
assets/educational/text/: tip1.txt  tip2.txt  tip3.txt  tip4.txt  tip5.txt  tip6.txt  tip7.txt
assets/meows/: Dom meow.m4a  Julian Meow.m4a  Kenneth meow.m4a  Kian meow.m4a  Laura meow.m4a  Nehal meow.m4a  Phoebe meow.m4a  Stemple meow.m4a  anais meow.m4a  bella.m4a  ben.m4a  caroline.m4a  dimitra.m4a  helen long quack.m4a  helen meow.m4a  helen quack.m4a  maddie meow.m4a  manya meow.m4a  rose.m4a  tanmay.m4a  tiff.m4a  will-sasaki.m4a  zoe.m4a
src/: bonnie.rs  main.rs
src/plugins/: bonnie_state.rs  control.rs  global_cursor.rs  mod.rs
