[package]
name = "bath-hack-25"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
dpi = "0.1.1"
enigo = "0.3.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.9.0"
strum = { version = "0.27.1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
